--- a/zmqClient1/zmqClient1.vcxproj
+++ b/zmqClient1/zmqClient1.vcxproj
@@ -74,8 +74,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\Harris\Documents\GitHub\zguide\examples\C;$(ZMQ_HOME)\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ZMQ_HOME)\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(GITHUB_HOME)\cppzmq;$(ZMQ_ZGUIDE)\examples\C++;$(ZMQ_CPP_INCLUDES);$(ZMQ_HOME)\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>$(ZMQ_LIBS)\$(Platform);$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)\Output\$(ProjectName)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -83,6 +83,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <LibraryPath>$(ZMQ_LIBS)\$(Platform);$(LibraryPath)</LibraryPath>
+    <IncludePath>$(GITHUB_HOME)\cppzmq;$(ZMQ_ZGUIDE)\examples\C++;$(ZMQ_CPP_INCLUDES);$(ZMQ_HOME)\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -108,11 +110,12 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(ZMQ_HOME)\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ZMQ_LIBS)\$(Platform);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libzmq.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(ZMQ_HOME)\bin\$(PlatformTargetAsMSBuildArchitecture)\libzmq.dll $(OutputPath)</Command>
+      <Command>copy $(ZMQ_LIBS)\$(Platform)\libzmq.dll $(OutputPath)
+copy $(ZMQ_LIBS)\$(Platform)\libsodium.dll $(OutputPath)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -147,7 +150,13 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>$(ZMQ_LIBS)\$(Platform);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libzmq.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(ZMQ_LIBS)\$(Platform)\libzmq.dll $(OutputPath)
+copy $(ZMQ_LIBS)\$(Platform)\libsodium.dll $(OutputPath)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
